# nala

./: .gitignore  .travis.yml  Pipfile  README.md  nala.py  print_annotation_stats.py  pyproject.toml  requirements.txt  run_iteration.py  setup.py
nala/: __init__.py
nala/bootstrapping/: __init__.py  document_filters.py  iteration.py  pmid_filters.py  utils.py
nala/data/: README.md  __init__.py  dict_nl_words_v2.json  nl_patterns.json  nl_regex_words.json
nala/features/: __init__.py  nl_mutations.py  regex.py  relations.py  stopwords.txt  tmvar.py
nala/learning/: __init__.py  evaluators.py  postprocessing.py  taggers.py  train.py
nala/preprocessing/: __init__.py  definers.py
nala/structures/: __init__.py  data.py  selection_pipelines.py
nala/utils/: __init__.py  annotation_readers.py  corpora.py  pattern_eval.py  uniprot_utils.py
resources/bootstrapping/: stats.csv
resources/corpora/: corpora_document_selection.md  stats.tsv
resources/coverage_of_methods/: DEPRECATED_nala_discoveries.py  SetsKnown.jsonp  SetsKnown.py  index.html  index.js  nala_discoveries.jsonp
resources/methods_coverage/: index.js  nala_discoveries.jsonp  package.json
resources/predictions/: README.md  iterations_progress.tsv
results/: corpora_stats.xlsx  readme.md  standard_error.txt
scripts/: SETH.py  assign_itrs_randomly.py  cv_collect.py  getIAA.py  get_corpus_stats.py  hist.py  map_docs_to_itrs.py  run_iteration.py  simple_SE.py  standard_error.py  tag_seth.py  tag_tmvar.py  train.py  train_embeddings.py  train_idp4.py  trrr..py  tsne.py  zqsub_job.sh
(+7821 files in other folders)
